--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -35,7 +35,12 @@
   <div class="col-8 offset-3 mb-3">
     <hr />
     <h4>Leave a Review</h4>
-    <form action="/listings/<%= listing.id %>/reviews" method="post">
+    <form
+      action="/listings/<%= listing.id %>/reviews"
+      method="post"
+      novalidate
+      class="needs-validation"
+    >
       <div class="mb-3 mt-3">
         <label for="rating" class="form-label">Rating</label>
         <input
@@ -55,7 +60,9 @@
           cols="30"
           rows="5"
           class="form-control"
+          required
         ></textarea>
+        <div class="invalid-feedback">Please add some comments for review</div>
       </div>
       <button class="btn btn-outline-dark">Submit</button>
     </form>
