feat: Add delete button for individual reviews

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -78,6 +78,13 @@
           <p class="card-text"><%= review.comment %></p>
           <p class="card-text"><%= review.rating %> stars</p>
         </div>
+        <form
+          class="mb-3 mt-2"
+          method="post"
+          action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE"
+        >
+          <button class="btn btn-sm btn-dark">Delete</button>
+        </form>
       </div>
       <% } %>
     </div>
