--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -21,6 +21,8 @@
   </div>
 
   <br />
+
+  <% if(currUser && currUser._id.equals(listing.owner._id)) { %>
   <div class="btns">
     <a
       href="/listings/<%= listing._id %>/edit"
@@ -32,6 +34,7 @@
       <button class="btn btn-dark offset-5">Delete</button>
     </form>
   </div>
+  <% } %>
 
   <div class="col-8 offset-3 mb-3">
     <hr />
