--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -15,6 +15,7 @@
       <p class="card-text">
         &#8377; <%= listing.price.toLocaleString("en-IN") %>
       </p>
+
       <p class="card-text"><%= listing.location %></p>
       <p class="card-text"><%= listing.country %></p>
     </div>
@@ -22,7 +23,8 @@
 
   <br />
 
-  <% if(currUser && currUser._id.equals(listing.owner._id)) { %>
+  <% if(currUser && listing.owner._id.equals(currUser._id)) { %>
+
   <div class="btns">
     <a
       href="/listings/<%= listing._id %>/edit"
@@ -35,9 +37,9 @@
     </form>
   </div>
   <% } %>
-
   <div class="col-8 offset-3 mb-3">
     <hr />
+    <% if(currUser) { %>
     <h4>Leave a Review</h4>
     <form
       action="/listings/<%= listing.id %>/reviews"
@@ -70,15 +72,15 @@
       </div>
       <button class="btn btn-outline-dark">Submit</button>
     </form>
-
     <hr />
+    <% } %>
 
     <p><b>All Reviews</b></p>
     <div class="row">
       <% for(review of listing.reviews) { %>
       <div class="card col-5 ms-3 mb-3">
         <div class="card-body">
-          <h5 class="card-title">Jane Doe</h5>
+          <h5 class="card-title">@<%= review.author.username %></h5>
           <p class="card-text"><%= review.comment %></p>
           <p class="card-text"><%= review.rating %> stars</p>
         </div>
