feat: conditionally render reviews section only if reviews exist

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -38,8 +38,8 @@
   </div>
   <% } %>
   <div class="col-8 offset-3 mb-3">
-    <hr />
     <% if(currUser) { %>
+    <hr />
     <h4>Leave a Review</h4>
     <form
       action="/listings/<%= listing.id %>/reviews"
@@ -111,10 +111,9 @@
       <button class="btn btn-outline-dark">Submit</button>
     </form>
     <hr />
-    <% } %>
-
-    <p><b>All Reviews</b></p>
+    <% } %> <% if(listing.reviews.length > 0) { %>
     <div class="row">
+      <p><b>All Reviews</b></p>
       <% for(review of listing.reviews) { %>
       <div class="card col-5 ms-3 mb-3">
         <div class="card-body">
@@ -124,16 +123,18 @@
             data-rating="<%= review.rating %>"
           ></p>
           <p class="card-text"><%= review.comment %></p>
+
+          <form
+            class="mb-3 mt-2"
+            method="post"
+            action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE"
+          >
+            <button class="btn btn-sm btn-dark">Delete</button>
+          </form>
         </div>
-        <form
-          class="mb-3 mt-2"
-          method="post"
-          action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE"
-        >
-          <button class="btn btn-sm btn-dark">Delete</button>
-        </form>
       </div>
       <% } %>
     </div>
+    <% } %>
   </div>
 </div>
