--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -4,6 +4,7 @@
   #filters {
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
   }
 
   .filter {
@@ -20,6 +21,20 @@
 
   .filter p {
     font-size: 0.8rem;
+  }
+
+  .tax-info {
+    display: none;
+  }
+
+  .tax-toggle {
+    border: 1px solid black;
+    border-radius: 1rem;
+    height: 3.25rem;
+    padding: 1rem;
+    margin-left: 2rem;
+    display: flex;
+    align-items: center;
   }
 </style>
 
@@ -60,6 +75,28 @@
     <div><i class="fa-solid fa-snowflake"></i></div>
     <p>Arctic</p>
   </div>
+  <div class="filter">
+    <div><i class="fa-solid fa-igloo"></i></div>
+    <p>Domes</p>
+  </div>
+  <div class="filter">
+    <div><i class="fa-solid fa-ship"></i></div>
+    <p>Boats</p>
+  </div>
+
+  <div class="tax-toggle">
+    <div class="form-check-reverse form-switch">
+      <input
+        class="form-check-input"
+        type="checkbox"
+        role="switch"
+        id="switchCheckDefault"
+      />
+      <label class="form-check-label" for="switchCheckDefault"
+        >Display total after taxes</label
+      >
+    </div>
+  </div>
 </div>
 <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3">
   <% for(let listing of allListings) { %>
@@ -76,9 +113,24 @@
         <p class="card-text">
           <b><%= listing.title %></b> <br />
           &#8377; <%= listing.price.toLocaleString("en-IN") %> / night
+          <i class="tax-info"> &nbsp; &nbsp;+18% GST</i>
         </p>
       </div>
     </div>
   </a>
   <% } %>
 </div>
+
+<script>
+  let taxSwitch = document.getElementById("switchCheckDefault");
+  taxSwitch.addEventListener("click", () => {
+    let taxInfo = document.getElementsByClassName("tax-info");
+    for (info of taxInfo) {
+      if (info.style.display != "inline") {
+        info.style.display = "inline";
+      } else {
+        info.style.display = "none";
+      }
+    }
+  });
+</script>
